create: styles for header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
               class="logo__image"
             />
           </a>
-          <form action="#" class="search">
+
+          <form action="#" class="search header__search">
             <input
               type="text"
               class="search__input"
@@ -32,6 +33,7 @@
               <img src="img/search.svg" alt="icon:search" />
             </button>
           </form>
+
           <a href="#" class="user">
             <img
               src="img/user-pic.jpg"
