--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="header">
+    <navbar class="navbar">
       <div class="container">
-        <div class="header-wrapper">
+        <div class="navbar-wrapper">
           <a href="#" class="logo">
             <img
               src="img/gorizontal-logo.svg"
@@ -23,7 +23,7 @@
             />
           </a>
 
-          <form action="#" class="search header__search">
+          <form action="#" class="search navbar__search">
             <input
               type="text"
               class="search__input"
@@ -43,30 +43,30 @@
             <span class="user__name">Nathan</span>
           </a>
         </div>
-        <ul class="header-menu">
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">All deals</a>
+        <ul class="navbar-menu">
+          <li class="navbar-menu__item">
+            <a href="#" class="navbar-menu__link">All deals</a>
           </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Hotels</a>
+          <li class="navbar-menu__item">
+            <a href="#" class="navbar-menu__link">Hotels</a>
           </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Activites</a>
+          <li class="navbar-menu__item">
+            <a href="#" class="navbar-menu__link">Activites</a>
           </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Hotel Day Packages</a>
+          <li class="navbar-menu__item">
+            <a href="#" class="navbar-menu__link">Hotel Day Packages</a>
           </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Restaurants</a>
+          <li class="navbar-menu__item">
+            <a href="#" class="navbar-menu__link">Restaurants</a>
           </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Events</a>
+          <li class="navbar-menu__item">
+            <a href="#" class="navbar-menu__link">Events</a>
           </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Rodrigues</a>
+          <li class="navbar-menu__item">
+            <a href="#" class="navbar-menu__link">Rodrigues</a>
           </li>
         </ul>
       </div>
-    </header>
+    </navbar>
   </body>
 </html>
