--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   </head>
   <body>
     <header class="navbar">
@@ -112,10 +113,46 @@
           </div>
           <div class="rating hotel-info__rating">
             <span class="rating__text">User rating</span>
-            <span class="rating__counter">4.5/5</span>
+            <span class="rating__counter">4.5/</span
+            ><span class="rating__fraction">5</span>
           </div>
         </div>
+        <div class="hotel-grid">
+          <div class="slider">
+            <!-- Slider main container -->
+            <div class="swiper">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                  <img src="img/slide-1.jpg" alt="слайд1" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/slide-2.jpg" alt="слайд2" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/slide-3.jpg" alt="слайд3" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/slide-4.jpg" alt="слайд4" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/slide-5.jpg" alt="слайд4" />
+                </div>
+              </div>
+
+              <!-- If we need navigation buttons -->
+              <button class="slider-button slider-button--prev"></button>
+              <button class="slider-button slider-button--next"></button>
+            </div>
+            <!-- /.swiper-->
+          </div>
+          <!-- /.slider -->
+        </div>
+        <!-- /.hotel-grid -->
       </div>
     </section>
+    <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
