--- a/index.html
+++ b/index.html
@@ -148,6 +148,58 @@
             <!-- /.swiper-->
           </div>
           <!-- /.slider -->
+          <div class="hotel-right">
+            <div class="booking">
+              <div class="booking__info">
+                <div class="booking__price">
+                  <span class="booking__start">price starts as</span>
+                  <strong class="booking__tag">$ 8,500</strong>
+                  <span class="booking__per-room">per room / night</span>
+                </div>
+                <div class="booking__room">
+                  <div class="booking__text">
+                    <img
+                      src="img/user.svg"
+                      alt="user icon"
+                      class="booking__icon"
+                    />
+                    <span class="booking__desc">2 x Guests</span>
+                  </div>
+                  <div class="booking__text">
+                    <img
+                      src="img/room.svg"
+                      alt="room icon"
+                      class="booking__icon"
+                    />
+                    <span class="booking__desc">1 x Room</span>
+                  </div>
+                </div>
+              </div>
+              <!-- /.booking__info -->
+              <div class="booking__call-center">
+                <span class="booking__heading">Quick Booking</span>
+                <a class="booking__number" href="tel:12100"
+                  ><img src="img/phone.svg" alt="phone icon" /><span
+                    class="booking__num"
+                    >12100</span
+                  >
+                </a>
+              </div>
+              <!-- /.call-center -->
+              <button class="button booking__button">View Other Options</button>
+            </div>
+            <!-- /.booking -->
+            <div class="map">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1454747.4769330658!2d-69.6796652901584!3d18.086108353252083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ea8abca5784145d%3A0x33c04f2e04f8ffa!2sHilton%20La%20Romana%2C%20an%20All-Inclusive%20Adult%20Only%20Resort!5e0!3m2!1sru!2sru!4v1643234260928!5m2!1sru!2sru"
+                width="347"
+                height="213"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+              ></iframe>
+            </div>
+          </div>
         </div>
         <!-- /.hotel-grid -->
       </div>
