--- a/index.html
+++ b/index.html
@@ -118,26 +118,46 @@
           </div>
         </div>
         <div class="hotel-grid">
-          <div class="slider">
+          <div class="slider hotel__slider">
             <!-- Slider main container -->
             <div class="swiper">
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <img src="img/slide-1.jpg" alt="слайд1" />
+                  <img
+                    class="swiper-slide__img"
+                    src="img/slide-1.jpg"
+                    alt="слайд1"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-2.jpg" alt="слайд2" />
+                  <img
+                    class="swiper-slide__img"
+                    src="img/slide-2.jpg"
+                    alt="слайд2"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-3.jpg" alt="слайд3" />
+                  <img
+                    class="swiper-slide__img"
+                    src="img/slide-3.jpg"
+                    alt="слайд3"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-4.jpg" alt="слайд4" />
+                  <img
+                    class="swiper-slide__img"
+                    src="img/slide-4.jpg"
+                    alt="слайд4"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-5.jpg" alt="слайд4" />
+                  <img
+                    class="swiper-slide__img"
+                    src="img/slide-5.jpg"
+                    alt="слайд4"
+                  />
                 </div>
               </div>
 
@@ -192,7 +212,7 @@
             <div class="map">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1454747.4769330658!2d-69.6796652901584!3d18.086108353252083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ea8abca5784145d%3A0x33c04f2e04f8ffa!2sHilton%20La%20Romana%2C%20an%20All-Inclusive%20Adult%20Only%20Resort!5e0!3m2!1sru!2sru!4v1643234260928!5m2!1sru!2sru"
-                width="347"
+                width="100%"
                 height="213"
                 style="border: 0"
                 allowfullscreen=""
