--- a/index.html
+++ b/index.html
@@ -118,56 +118,58 @@
           </div>
         </div>
         <div class="hotel-grid">
-          <div class="slider hotel__slider">
-            <!-- Slider main container -->
-            <div class="swiper">
-              <!-- Additional required wrapper -->
-              <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__img"
-                    src="img/slide-1.jpg"
-                    alt="слайд1"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__img"
-                    src="img/slide-2.jpg"
-                    alt="слайд2"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__img"
-                    src="img/slide-3.jpg"
-                    alt="слайд3"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__img"
-                    src="img/slide-4.jpg"
-                    alt="слайд4"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__img"
-                    src="img/slide-5.jpg"
-                    alt="слайд4"
-                  />
-                </div>
+          <!-- Slider main container -->
+          <div class="swiper hotel-slider hotel__slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__img"
+                  src="img/slide-1.jpg"
+                  alt="слайд1"
+                />
               </div>
-
-              <!-- If we need navigation buttons -->
-              <button class="slider-button slider-button--prev"></button>
-              <button class="slider-button slider-button--next"></button>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__img"
+                  src="img/slide-2.jpg"
+                  alt="слайд2"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__img"
+                  src="img/slide-3.jpg"
+                  alt="слайд3"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__img"
+                  src="img/slide-4.jpg"
+                  alt="слайд4"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__img"
+                  src="img/slide-5.jpg"
+                  alt="слайд4"
+                />
+              </div>
             </div>
-            <!-- /.swiper-->
+
+            <!-- If we need navigation buttons -->
+            <button
+              class="hotel-slider__button hotel-slider__button--prev"
+            ></button>
+            <button
+              class="hotel-slider__button hotel-slider__button--next"
+            ></button>
           </div>
-          <!-- /.slider -->
+          <!-- /.swiper-->
+
           <div class="hotel-right">
             <div class="booking">
               <div class="booking__info">
@@ -240,6 +242,90 @@
         </form>
       </div>
       <!-- /.newsletter-wrapper -->
+    </section>
+    <section class="reviews">
+      <div class="container">
+        <h2 class="reviews__title">What people think about us</h2>
+        <div class="swiper reviews-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/reviews-avatar.jpg"
+                    alt="photo Megan Fox"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__username">Megan Fox</h3>
+                  <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                  <div class="reviews-slider__rating">
+                    <img src="img/Star.svg" alt="star" />
+                    <img src="img/Star.svg" alt="star" />
+                    <img src="img/Star.svg" alt="star" />
+                    <img src="img/Star.svg" alt="star" />
+                    <img src="img/Star.svg" alt="star" />
+                  </div>
+                </div>
+                <p class="reviews-slider__text">
+                  It was very nice hotel with cleanliness. Staff behavior was
+                  good and polite. They welcome us very well. Issue was only
+                  that Lift was not in working and we were allotted to 3rd floor
+                  and amenities articles were in corner of gallery which were
+                  giving bad feeling. Breakfast was good and support of the
+                  staff was also very nice. Location is not good as per
+                  atmosphere, it is very nearby most of the popular places but
+                  self location in a narrow street is not good. Overall it was a
+                  good experience and could recommend.
+                </p>
+              </div>
+
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/reviews-avatar-2.jpg"
+                    alt="photo Megan Fox"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__username">Megan Fox2</h3>
+                  <span class="reviews-slider__date">Stayed 28 Nov, 2021</span>
+                  <div class="reviews-slider__rating">
+                    <img src="img/Star.svg" alt="star" />
+                    <img src="img/Star.svg" alt="star" />
+                    <img src="img/Star.svg" alt="star" />
+                    <img src="img/Star.svg" alt="star" />
+                    <img src="img/Star.svg" alt="star" />
+                  </div>
+                </div>
+                <p class="reviews-slider__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                  praesentium unde veritatis tenetur eveniet a culpa corrupti
+                  aspernatur eum hic eos repellendus, distinctio harum quam
+                  aliquam esse cum quos consequuntur exercitationem,
+                  necessitatibus autem, dicta velit. Quidem perspiciatis
+                  accusamus, quasi, quas cupiditate magni nobis quos deserunt
+                  inventore iste fugit animi ex.
+                </p>
+              </div>
+
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+          </div>
+          <!-- /.swiper-wrapper -->
+          <div>
+            <button
+              class="reviews-slider__button reviews-slider__button--prev"
+            ></button>
+            <button
+              class="reviews-slider__button reviews-slider__button--next"
+            ></button>
+          </div>
+        </div>
+      </div>
     </section>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
