--- a/index.html
+++ b/index.html
@@ -125,35 +125,35 @@
               <!-- Slides -->
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__img"
+                  class="hotel-slider__img"
                   src="img/slide-1.jpg"
                   alt="слайд1"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__img"
+                  class="hotel-slider__img"
                   src="img/slide-2.jpg"
                   alt="слайд2"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__img"
+                  class="hotel-slider__img"
                   src="img/slide-3.jpg"
                   alt="слайд3"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__img"
+                  class="hotel-slider__img"
                   src="img/slide-4.jpg"
                   alt="слайд4"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__img"
+                  class="hotel-slider__img"
                   src="img/slide-5.jpg"
                   alt="слайд4"
                 />
