fix: responsive hotel slider and review slider

--- a/index.html
+++ b/index.html
@@ -238,14 +238,17 @@
             class="subscribe__input"
             placeholder="Your email address"
           />
-          <button class="subscribe__button">Send</button>
+          <button class="subscribe__button">Send mail</button>
         </form>
       </div>
       <!-- /.newsletter-wrapper -->
     </section>
     <section class="reviews">
       <div class="container">
-        <h2 class="reviews__title">What people think about us</h2>
+        <div class="reviews-title">
+          <h2 class="reviews__title">What people think about us</h2>
+        </div>
+
         <div class="swiper reviews-slider">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -290,7 +293,10 @@
                     alt="photo Megan Fox"
                     class="reviews-slider__avatar"
                   />
-                  <h3 class="reviews-slider__username">Megan Fox2</h3>
+                  <h3 class="reviews-slider__username">
+                    Madona Lorem, ipsum dolor sit amet consectetur adipisicing
+                    elit. Mollitia, sint.
+                  </h3>
                   <span class="reviews-slider__date">Stayed 28 Nov, 2021</span>
                   <div class="reviews-slider__rating">
                     <img src="img/Star.svg" alt="star" />
@@ -307,7 +313,14 @@
                   aliquam esse cum quos consequuntur exercitationem,
                   necessitatibus autem, dicta velit. Quidem perspiciatis
                   accusamus, quasi, quas cupiditate magni nobis quos deserunt
-                  inventore iste fugit animi ex.
+                  inventore iste fugit animi ex Lorem ipsum dolor sit amet
+                  consectetur adipisicing elit. Non dignissimos asperiores
+                  inventore eaque. Dolorum fuga voluptatem corrupti quaerat.
+                  Debitis sapiente consequuntur, iste eligendi deserunt
+                  laudantium hic minima natus! Itaque consectetur alias
+                  molestias ipsam ex. Porro soluta esse qui rem, incidunt
+                  blanditiis recusandae ipsum id, repellendus nulla, pariatur
+                  iure totam dolores.
                 </p>
               </div>
 
