--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="navbar">
@@ -214,7 +214,7 @@
             <div class="map">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1454747.4769330658!2d-69.6796652901584!3d18.086108353252083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ea8abca5784145d%3A0x33c04f2e04f8ffa!2sHilton%20La%20Romana%2C%20an%20All-Inclusive%20Adult%20Only%20Resort!5e0!3m2!1sru!2sru!4v1643234260928!5m2!1sru!2sru"
-                width="100%"
+                width="347"
                 height="213"
                 style="border: 0"
                 allowfullscreen=""
