--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -226,6 +226,33 @@
         <!-- /.hotel-grid -->
       </div>
     </section>
+    <!--  <section class="other">
+      <div class="container">
+        <div class="other-grid">
+          <h2 class="other-title other-grid__item-title">Other Packages</h2>
+          <div class="other-grid__item-1">
+            <div class="other-grid__container-1">
+              <img src="img/other-11.jpg" alt="" class="pack other__img" />
+            </div>
+            <div class="other-grid__container-1">
+              <img src="img/other-2.jpg" alt="" class="pack other__img" />
+            </div>
+          </div>
+          <div class="other-grid__item-3">
+            <img src="img/other-3.jpg" alt="" class="pack other__img" />
+          </div>
+          <div class="other-grid__item-4">
+            <img src="img/other-4.jpg" alt="" class="pack other__img" />
+          </div>
+          <div class="other-grid__item-5">
+            <img src="img/other-5.jpg" alt="" class="pack other__img" />
+          </div>
+          <div class="other-grid__item-6">
+            <img src="img/other-6.jpg" alt="" class="pack other__img" />
+          </div>
+        </div>
+      </div>
+    </section>-->
     <section class="newsletter">
       <div class="newsletter-wrapper">
         <h2 class="newsletter-title newsletter__title">
@@ -238,7 +265,7 @@
             class="subscribe__input"
             placeholder="Your email address"
           />
-          <button class="subscribe__button">Send mail</button>
+          <button class="subscribe__button">Send</button>
         </form>
       </div>
       <!-- /.newsletter-wrapper -->
@@ -367,6 +394,167 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-wrapper">
+          <img
+            src="img/vertical-logo.svg"
+            alt="Logo:BestTourPlan"
+            class="logo footer__logo"
+          />
+          <div class="footer__list footer__categories">
+            <h3 class="footer__title">ALL CATEGORIES</h3>
+            <ul class="footer__ul">
+              <li class="footer__item">
+                <a href="#" class="footer__link">All Deals</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Hotels</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Activities</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Spa Packages</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Hotel Day Packages</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Restaurants</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Fitness</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Rodrigues</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__list footer__additional">
+            <h3 class="footer__title">ADDITIONAL INFORMATION</h3>
+            <ul class="footer__ul">
+              <li class="footer__item">
+                <a href="#" class="footer__link">About Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">How does it work?</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Frequently Asked Questions</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Deals.mu loyalty program</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link"
+                  >Promote your Business on BTP</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="footer__social-network">
+            <h3 class="footer__title footer__title--inline">Social Network</h3>
+            <div class="footer__social-links">
+              <a href="#" class="footer__link"
+                ><img src="img/fb.svg" alt="icon:FB"
+              /></a>
+              <a href="#" class="footer__link"
+                ><img src="img/yt.svg" alt="icon:Yuotube"
+              /></a>
+              <a href="#" class="footer__link"
+                ><img src="img/inst.svg" alt="icon:Inst"
+              /></a>
+            </div>
+          </div>
+          <div class="footer__list footer__legal">
+            <h3 class="footer__title">LEGAL INFORMATION</h3>
+            <ul class="footer__ul">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms & Conditions</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Disclaimer</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Cancellation policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__contact-details">
+            <h3 class="footer__title footer__title--mb-3">Contact Details</h3>
+            <p class="footer__text">
+              Feel free to contact us by phone, email or by our contact form
+            </p>
+            <ul class="footer__ul">
+              <li class="footer__item footer__item--mb-2">
+                <div class="footer__icon-wrapper">
+                  <img
+                    class="footer_icon"
+                    src="img/map-m.svg"
+                    alt="icon: map"
+                  />
+                </div>
+                9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United
+                States
+              </li>
+              <li class="footer__item footer__item--mb-2">
+                <div class="footer__icon-wrapper">
+                  <img
+                    class="footer_icon"
+                    mb-2
+                    src="img/phone-call.svg"
+                    alt="icon: phone"
+                  />
+                </div>
+                Tel (business hours) : 269 1500 <br />
+                Tel (hotline) Monday - Saturday:52-56-61-38 (08:00 am – 20:00
+                pm) <br />
+                Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm)
+              </li>
+              <li class="footer__item footer__item--mb-2">
+                <div class="footer__icon-wrapper">
+                  <img
+                    class="footer_icon"
+                    src="img/email.svg"
+                    alt="icon: email"
+                  />
+                </div>
+                cherly.lawson@example.com
+              </li>
+            </ul>
+          </div>
+          <div class="footer__contact-form">
+            <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
+            <form action="#" class="footer__form">
+              <input
+                type="text"
+                class="input footer__input"
+                placeholder="Your Full Name"
+              />
+              <input
+                type="text"
+                class="input footer__input"
+                placeholder="Phone Number"
+              />
+              <textarea
+                class="footer__message"
+                placeholder="Message"
+              ></textarea>
+              <button class="button footer__button" type="submit">Send</button>
+              <span class="footer__info">* Required Fields</span>
+            </form>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
