--- a/index.html
+++ b/index.html
@@ -553,6 +553,12 @@
             </form>
           </div>
         </div>
+        <div class="footer-bottom">
+          <span class="footer-bottom__text"
+            >Disclaimer Conditions of use Cancellation policy</span
+          >
+          <img src="img/bottom-img.png" alt="" class="footer-bottom__img" />
+        </div>
       </div>
     </footer>
     <script src="js/swiper-bundle.min.js"></script>
