--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
               <li class="footer__item footer__item--mb-2">
                 <div class="footer__icon-wrapper">
                   <img
-                    class="footer_icon"
+                    class="footer__icon"
                     src="img/map-m.svg"
                     alt="icon: map"
                   />
@@ -508,8 +508,7 @@
               <li class="footer__item footer__item--mb-2">
                 <div class="footer__icon-wrapper">
                   <img
-                    class="footer_icon"
-                    mb-2
+                    class="footer__icon"
                     src="img/phone-call.svg"
                     alt="icon: phone"
                   />
@@ -522,7 +521,7 @@
               <li class="footer__item footer__item--mb-2">
                 <div class="footer__icon-wrapper">
                   <img
-                    class="footer_icon"
+                    class="footer__icon"
                     src="img/email.svg"
                     alt="icon: email"
                   />
