--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
         <div class="container">
           <ul class="navbar-menu">
             <li class="navbar-menu__item navbar-menu__item--mobile_visible">
-              <a
-                href="#"
-                class="user navbar__user navbar__search--mobile_visible"
-              >
+              <a href="#" class="user navbar__user">
                 <img
                   src="img/user-pic.jpg"
                   alt="avatar:Nathan"
@@ -48,10 +45,7 @@
               </a>
             </li>
             <li class="navbar-menu__item navbar-menu__item--mobile_visible">
-              <form
-                action="#"
-                class="search navbar__search navbar__search--mobile_visible"
-              >
+              <form action="#" class="search navbar__search">
                 <input
                   type="text"
                   class="search__input"
