--- a/index.html
+++ b/index.html
@@ -23,6 +23,27 @@
               class="logo__image"
             />
           </a>
+          <form
+            action="#"
+            class="search navbar__search navbar__search--mobile_hidden"
+          >
+            <input
+              type="text"
+              class="search__input"
+              placeholder="Search Location"
+            />
+            <button class="search__button">
+              <img src="img/search.svg" alt="icon:search" />
+            </button>
+          </form>
+          <a href="#" class="user navbar__user navbar__user--mobile_hidden">
+            <img
+              src="img/user-pic.jpg"
+              alt="avatar:Nathan"
+              class="user__avatar"
+            />
+            <span class="user__name">Nathan</span>
+          </a>
 
           <button class="menu-button navbar-wrapper__menu-btn">
             <span class="menu-button__line"></span>
@@ -562,13 +583,17 @@
               <span class="footer__info">* Required Fields</span>
             </form>
           </div>
-          <div class="footer__bottom-text">
-            <span class="footer__policy">
-              Disclaimer Conditions of use Cancellation policy
-            </span>
-          </div>
-          <div class="footer__bottom-img">
-            <img src="img/bottom-img.png" alt="" class="footer__img5" />
+          <div class="footer__bottom-wrap">
+            <div class="footer-blank"></div>
+
+            <div class="footer__bottom-text">
+              <span class="footer__policy">
+                Disclaimer Conditions of use Cancellation policy
+              </span>
+            </div>
+            <div class="footer__bottom-img">
+              <img src="img/bottom-img.png" alt="" class="footer__img5" />
+            </div>
           </div>
         </div>
       </div>
