fix: footer-bottom

--- a/index.html
+++ b/index.html
@@ -584,12 +584,22 @@
             </form>
           </div>
           <div class="footer__bottom-wrap">
-            <div class="footer-blank"></div>
+            <div class="footer__bottom-blank"></div>
 
             <div class="footer__bottom-text">
-              <span class="footer__policy">
-                Disclaimer Conditions of use Cancellation policy
-              </span>
+              <ul class="footer__bottom-list">
+                <li>
+                  <a href="#" class="footer__bottom-link">Disclaimer</a>
+                </li>
+                <li>
+                  <a href="#" class="footer__bottom-link">Conditions of use</a>
+                </li>
+                <li>
+                  <a href="#" class="footer__bottom-link"
+                    >Cancellation policy</a
+                  >
+                </li>
+              </ul>
             </div>
             <div class="footer__bottom-img">
               <img src="img/bottom-img.png" alt="" class="footer__img5" />
