create: modal form & resposive by media

--- a/index.html
+++ b/index.html
@@ -628,6 +628,12 @@
             placeholder="Phone Number"
             name="phone"
           />
+          <input
+            type="text"
+            class="input modal__input"
+            placeholder="Email*"
+            name="email"
+          />
           <textarea
             class="message modal__message"
             placeholder="Message"
