fix: 28lesson modal form

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               Stays Free
             </p>
           </div>
-          <div data-toggle="modal" class="rating hotel-info__rating">
+          <div class="rating hotel-info__rating">
             <span class="rating__text">User rating</span>
             <span class="rating__counter">4.5/</span
             ><span class="rating__fraction">5</span>
@@ -401,22 +401,22 @@
           <div class="card activities__card">
             <img src="img/activities-1.jpg" alt="Photo" class="card__image" />
             <h3 class="card__title">The curious corner of chamarel</h3>
-            <button class="card__button">Book Now</button>
+            <button data-toggle="modal" class="card__button">Book Now</button>
           </div>
           <div class="card activities__card">
             <img src="img/activities-2.jpg" alt="Photo" class="card__image" />
             <h3 class="card__title">Gymkhana club golf course</h3>
-            <button class="card__button">Book Now</button>
+            <button data-toggle="modal" class="card__button">Book Now</button>
           </div>
           <div class="card activities__card">
             <img src="img/activities-3.jpg" alt="Photo" class="card__image" />
             <h3 class="card__title">Tamarind falls hiking trip - full day</h3>
-            <button class="card__button">Book Now</button>
+            <button data-toggle="modal" class="card__button">Book Now</button>
           </div>
           <div class="card activities__card">
             <img src="img/activities-4.jpg" alt="Photo" class="card__image" />
             <h3 class="card__title">The blue marine discovery quest</h3>
-            <button class="card__button">Book Now</button>
+            <button data-toggle="modal" class="card__button">Book Now</button>
           </div>
         </div>
       </div>
