--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Best Tour Plan - Hotel Booking</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
-      rel="stylesheet"
+      rel="preload"
     />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/aos.css" />
@@ -335,7 +335,7 @@
                   class="reviews-slider__text"
                   data-aos="flip-left"
                   data-aos-easing="ease-out-cubic"
-                  data-aos-duration="2000"
+                  data-aos-duration="3000"
                 >
                   It was very nice hotel with cleanliness. Staff behavior was
                   good and polite. They welcome us very well. Issue was only
