fix: type tel for mask

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
               </div>
               <div class="footer__input-group">
                 <input
-                  type="phone_mask"
+                  type="tel"
                   class="input footer__input modal__musk"
                   placeholder="Phone Number"
                   name="phone"
@@ -646,7 +646,7 @@
             minlength="2"
           />
           <input
-            type="phone_mask"
+            type="tel"
             class="input modal__input modal__musk"
             placeholder="Phone Number*"
             name="phone"
