--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
         <a href="#" class="modal__close"
           ><img src="img/close.svg" alt="icon: close"
         /></a>
-        <h3 class="modal__title modal__title--mb-3">Send us a message</h3>
+        <h3 class="modal__title modal__title--mb-3">Booking</h3>
         <form action="send.php" method="post" class="modal__form form">
           <input
             type="text"
