fix: form validation

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                   placeholder="Phone Number"
                   name="phone"
                   required
-                  minlength="2"
+                  minlength="16"
                 />
               </div>
 
@@ -664,14 +664,15 @@
             minlength="2"
           />
           <input
-            type="text"
-            class="input modal__input"
+            type="tel"
             id="tt"
+            class="input modal__input"
             placeholder="Phone Number*"
             name="phone"
             required
-            minlength="2"
+            minlength="16"
           />
+             
           <input
             type="text"
             class="input modal__input"
