--- a/thankyou.html
+++ b/thankyou.html
@@ -16,7 +16,7 @@
     <header class="navbar navbar--mobile_fixed">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="logo">
+          <a href="index.html" class="logo">
             <img
               src="img/gorizontal-logo.svg"
               alt="logo Best Tour Plan"
@@ -106,6 +106,12 @@
             <p class="hotel-description hotel-info__description">
               Manager will call you via 5 minits.
             </p>
+            <br />
+            <div class="hotel-description hotel-info__description">
+              <a class="breadcrumb-list__link" href="index.html"
+                >Return to home page</a
+              >
+            </div>
           </div>
         </div>
       </div>
@@ -114,11 +120,13 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-wrapper">
-          <img
-            src="img/vertical-logo.svg"
-            alt="Logo:BestTourPlan"
-            class="logo footer__logo"
-          />
+          <a href="index.html" class="footer__logo">
+            <img
+              src="img/vertical-logo.svg"
+              alt="Logo:BestTourPlan"
+              class="logo footer__logo"
+            />
+          </a>
           <div class="footer__list footer__categories">
             <h3 class="footer__title">ALL CATEGORIES</h3>
             <ul class="footer__ul">
