--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
       rel="preload"
+      as="font"
     />
+
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -116,7 +118,7 @@
         </ol>
       </div>
     </nav>
-   
+
     <section class="hotel">
       <div class="container">
         <div class="hotel-info">
@@ -285,7 +287,7 @@
       <div class="newsletter-wrapper">
         <h2 class="newsletter-title newsletter__title">
           subscribe to our
-          <span class="newsletter-title__strong">Newsletter</span>
+          <span class="newsletter-title__strong">Newsletter </span>
         </h2>
         <form
           action="send.php"
@@ -504,13 +506,22 @@
           <div class="footer__social-network">
             <h3 class="footer__title footer__title--inline">Social Network</h3>
             <div class="footer__social-links">
-              <a href="https://facebook.com/" class="footer__link" target="_blank"
+              <a
+                href="https://facebook.com/"
+                class="footer__link"
+                target="_blank"
                 ><img src="img/fb.svg" alt="icon:FB"
               /></a>
-              <a href="https://www.youtube.com/" class="footer__link"  target="_blank"
+              <a
+                href="https://www.youtube.com/"
+                class="footer__link"
+                target="_blank"
                 ><img src="img/yt.svg" alt="icon:Yuotube"
               /></a>
-              <a href="https://www.instagram.com/" class="footer__link"  target="_blank"
+              <a
+                href="https://www.instagram.com/"
+                class="footer__link"
+                target="_blank"
                 ><img src="img/inst.svg" alt="icon:Inst"
               /></a>
             </div>
@@ -557,25 +568,21 @@
                     src="img/phone-call.svg"
                     alt="icon: phone"
                   />
-                </div>
-                <div class="tel__link">
-                  <span>Tel (business hours) : </span>
-                  <a class="footer__link" href="tel:2691500"
-                    >269 1500</a
-                  > <br>
-               
 
-                <div class="tel__link">
-                  <span>Tel (hotline) Monday - Saturday:</span>
-                  <a class="footer__link" href="tel:52566138"
-                    >52-56-61-38</a> 
-                  <span> (08:00 am –
-                    20:00 pm)</span>  <br>
-                  <span>Tel (hotline) Sunday: </span>
-                  <a class="footer__link" href="tel:52566138"
-                    >52-56-61-38</a
-                  >
-                  <span> (08:00 am – 14:00 pm)</span>
+                  <div class="tel__link">
+                    <span>Tel (business hours) : </span>
+                    <a class="footer__link" href="tel:2691500">269 1500</a>
+                    <br />
+                  </div>
+
+                  <div class="tel__link">
+                    <span>Tel (hotline) Monday - Saturday:</span>
+                    <a class="footer__link" href="tel:52566138">52-56-61-38</a>
+                    <span> (08:00 am – 20:00 pm)</span> <br />
+                    <span>Tel (hotline) Sunday: </span>
+                    <a class="footer__link" href="tel:52566138">52-56-61-38</a>
+                    <span> (08:00 am – 14:00 pm)</span>
+                  </div>
                 </div>
               </li>
               <li class="footer__item footer__item--mb-2">
@@ -594,9 +601,9 @@
           </div>
 
           <div class="footer__contact-form">
-            <h3 class="footer__title footer__title--mb-3" >Send us a message</h3>
+            <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
             <form action="send.php" method="post" class="footer__form form">
-              <div id="input-name" class="footer__input-group" >
+              <div id="input-name" class="footer__input-group">
                 <input
                   type="text"
                   class="input footer__input"
@@ -609,7 +616,6 @@
               <div class="footer__input-group" id="input-tel">
                 <input
                   type="tel"
-                  id="tt"
                   class="footer-tel input footer__input"
                   placeholder="Phone Number"
                   name="phone"
@@ -677,7 +683,7 @@
             required
             minlength="16"
           />
-             
+
           <input
             type="email"
             class="input modal__input"
