--- a/thankyou.html
+++ b/thankyou.html
@@ -107,10 +107,10 @@
               Manager will call you via 5 minits.
             </p>
             <br />
-            <div class="hotel-description hotel-info__description">
-              <a class="breadcrumb-list__link" href="index.html"
-                >Return to home page</a
-              >
+            <div>
+              <a href="index.html" class="button hotel-return"
+                >Return to Home page
+              </a>
             </div>
           </div>
         </div>
